[gd_scene load_steps=7 format=2]

[ext_resource path="res://Effects/HyperspaceEffect2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Effects/Hyperspace3D.gd" type="Script" id=2]
[ext_resource path="res://Effects/hs_vp_texture.tres" type="Texture" id=3]

[sub_resource type="Environment" id=1]
background_mode = 1
background_energy = 0.0
ambient_light_sky_contribution = 0.0

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport2")

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[node name="Hyperspace3D" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
environment = SubResource( 1 )
current = true
fov = 90.0

[node name="Control" type="Button" parent="Camera"]
margin_right = 145.0
margin_bottom = 41.0
text = "debug hyperspace"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipScene" type="Sprite3D" parent="."]
transform = Transform( -2.38498e-09, 7.77124e-16, -0.2, -6.51683e-08, -0.2, 0, -0.2, 6.51683e-08, 2.38498e-09, -0.7, 0, 0 )
visible = false
texture = SubResource( 2 )

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 1200, 600 )
transparent_bg = true

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1000, 500 )
transparent_bg = true

[node name="Hyperspace" parent="Viewport" instance=ExtResource( 1 )]
autostart = false

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -1.30337e-06, 0, 0.5, 0, 0.5, 0, -8, 0, -8.14603e-08, 1, 0, -38 )
texture = ExtResource( 3 )

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform( -6.51683e-08, 0, 0.5, 0, 0.5, 0, -0.4, 0, -8.14603e-08, -1, 0, 0 )
texture = ExtResource( 3 )

[node name="Sprite3D3" type="Sprite3D" parent="."]
transform = Transform( -1.30337e-06, 0.5, -2.18557e-08, 0, -2.18557e-08, -0.5, -8, -8.14603e-08, 3.56074e-15, 0, 1, -38 )
texture = ExtResource( 3 )

[node name="Sprite3D4" type="Sprite3D" parent="."]
transform = Transform( -1.30337e-06, 0.5, -2.18557e-08, 0, -2.18557e-08, -0.5, -8, -8.14603e-08, 3.56074e-15, 0, -1, -38 )
texture = ExtResource( 3 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 2, 0, 0, 0, -3.25841e-07, 2, 0, -2, -3.25841e-07, 0, 0, -35 )
visible = false
invert_faces = true
radius = 0.885355
height = 2.28975
cone = true
material = SubResource( 3 )

[node name="TweenScale" type="Tween" parent="."]

[node name="TweenOffset" type="Tween" parent="."]

[node name="TweenR" type="Tween" parent="."]
[connection signal="button_up" from="Camera/Control" to="." method="_on_Control_button_up"]
[connection signal="tween_completed" from="TweenScale" to="." method="_on_TweenScale_tween_completed"]
[connection signal="tween_completed" from="TweenOffset" to="." method="_on_TweenOffset_tween_completed"]
[connection signal="tween_completed" from="TweenR" to="." method="_on_TweenR_tween_completed"]
